# RobotOperatingSystem

./: README.md
navigation_exam/: CMakeLists.txt  frames.gv  package.xml
navigation_exam/config/: saved_loc.yaml
navigation_exam/launch/: goal_service_server.launch  localization.launch  mapping.launch  path_planning.launch  provide_map.launch  send_goals.launch
navigation_exam/maps/: husky_exam.pgm  husky_exam.yaml
navigation_exam/params/: costmap_global.yaml  global_planner.yaml  local_planner.yaml  localization.yaml  mapping.yaml  move_base_params.yaml
navigation_exam/src/: goal_service_server.py  send_goals.py
src/actions_quiz/: CMakeLists.txt  package.xml
src/actions_quiz/launch/: action_custom_msg.launch
src/actions_quiz/scripts/: action_custom_server.py
src/basics_exam/launch/: drone_takeoff.launch  motion_service.launch  square_motion.launch
src/basics_exam/msg/: DistanceMoved.msg
src/basics_exam/scripts/: drone_takeoff.py  motion_service.py  square_motion.py
src/basics_exam/src/: CMakeLists.txt  package.xml
src/basics_exam/srv/: DistanceMotion.srv
src/my_package/launch/: my_package_launch_file.launch
src/my_subscriber_example_pkg/scripts/: simple_topic_subscriber.py
src/services_quiz/: CMakeLists.txt
src/services_quiz/launch/: call_bb8_move_in_square_custom_service_server.launch  start_bb8_move_custom_service_server.launch
src/services_quiz/scripts/: bb8_move_custom_service_client.py  bb8_move_custom_service_server.py
src/services_quiz/srv/: BB8CustomServiceMessage.srv
src/topics_quiz/launch/: topics_quiz.launch
(+1 files in other folders)
